fix: Fixed cursor moving off screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,23 +34,32 @@
   padding: 1em;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(38, 18.75px);
-  grid-template-rows: repeat(13, 35px);
+  /* Using fr units instead of fixed pixel values */
+  grid-template-columns: repeat(38, 1fr);
+  grid-template-rows: repeat(13, 1fr);
+  gap: 1px;
+  overflow: hidden; 
 }
 
 .cursor {
-  width: 20px;
-  height: 40px;
+  width: 100%; 
+  height: 100%;
+  min-width: 10px;
   background-color: red;
+  justify-self: center; 
+  align-self: center;
 }
 
 .target {
   color: aliceblue;
   margin: 0;
-  font-size: 20px;
-  margin: auto;
+  font-size: clamp(14px, 2vw, 20px); 
   font-weight: bold;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .navbar {
@@ -68,7 +77,7 @@
 }
 
 .nav-link {
-  font-size: 1.2rem;
+  font-size: clamp(1rem, 1.5vw, 1.2rem); /* Responsive font size */
   color: blue;
 }
 
@@ -76,42 +85,32 @@
   text-decoration: underline;
 }
 
-@media screen and (max-width: 800px) {
+/* More logical breakpoints with better scaling */
+@media screen and (max-width: 600px) {
   .game-board {
-    grid-template-columns: repeat(38, 11.25px);
+    width: 95%;
+    padding: 0.5em;
+  }
+  
+  .container {
+    gap: 0.2em;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px) {
+  .game-board {
     width: 90%;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .game-board {
-    grid-template-columns: repeat(38, 9.5px);
-    width: 85%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .game-board {
-    width: 80%;
-    height: 70%;
-    grid-template-rows: repeat(13, 30px);
-    grid-template-columns: repeat(38, 9px);
-  }
-}
-
-
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 801px) and (max-width: 1200px) {
   .container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 65%;
+    width: 80%;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .container{
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+@media screen and (min-width: 1201px) {
+  .container {
+    width: 65%;
   }
 }
